// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queryCS: 序 1`] = `
Array [
  Array [
    "ɕ",
    "y",
    "阴去",
    "〔原〕",
  ],
  Array [
    "ɕ",
    "i",
    "阴去",
    "〔新〕",
  ],
]
`;

exports[`queryCS: 指 1`] = `
Array [
  Array [
    "ts",
    "ɿ",
    "入",
    "〔未注明异读原因〕",
  ],
  Array [
    "ts",
    "ɿ",
    "上",
    "〔未注明异读原因〕",
  ],
]
`;

exports[`queryCS: 樹 1`] = `
Array [
  Array [
    "ɕ",
    "y",
    "阳去",
    "〔文〕树立",
  ],
  Array [
    "ɕ",
    "y",
    "阴去",
    "〔白〕树立",
  ],
  Array [
    "ɕ",
    "y",
    "阳去",
    "〔文〕树林",
  ],
  Array [
    "ɕ",
    "y",
    "阴去",
    "〔白〕树林",
  ],
]
`;

exports[`queryCS: 蟻 1`] = `
Array [
  Array [
    "ȵ",
    "i",
    "阳平",
    "〔文〕",
  ],
  Array [
    "ȵ",
    "i",
    "阳去",
    "〔白〕",
  ],
  Array [
    "ȵ",
    "i",
    "上",
    "〔白〕",
  ],
  Array [
    "ȵ",
    "i",
    "阴去",
    "〔白〕",
  ],
]
`;
